k8s/crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
spec:
  selector:
    app: synergychat-crawler
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
